# AgentCommunicationMCP

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  mcp_server.py  pyproject.toml
agent-cards/: desktop-agent.json  dev-agent.json  server-agent.json
docs/: HERMES_CONNECT.md  hermes-mcp-setup.md
docs/adr/: 0001-mcp-plus-a2a-shaped-mailbox.md
docs/plans/: IMPLEMENTATION_PLAN.md
research/: RESEARCH.md
scripts/: run_http.py  run_stdio.py
src/agent_communication_mcp/: __init__.py  activity.py  agent_cards.py  artifacts.py  auth.py  cli_profiles.py  launcher_registry.py  path_sandbox.py  provider_readiness.py  scopes.py  server.py  storage.py  tasks.py
src/agent_communication_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_abuse_cases.py  test_activity.py  test_agent_cards_tasks.py  test_auth_scopes.py  test_cli_profiles.py  test_import.py  test_launcher_registry.py  test_path_sandbox_artifacts.py  test_phase_b_routing.py  test_projection_tools.py  test_provider_readiness.py  test_server_tools.py
