[project]
name = "agent-communication-mcp"
version = "0.0.1"
description = "Authenticated LAN MCP/A2A-shaped communication layer for local agents"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0",
  "pydantic>=2",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
